--- a/package.json
+++ b/package.json
@@ -2,34 +2,29 @@
   "name": "wholeseller",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
+    "prestart": "npm i ./auth-service && npm i ./models && npm run schema:generate",
+    "schema:generate": "tsc generate-schemas.ts && node generate-schemas.js",
+    "start": "concurrently \"npm run start --prefix ./auth-service\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "express-http-context": "^1.2.4",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3",
-    "reflect-metadata": "^0.2.1",
-    "typeorm": "^0.3.20"
+    "dotenv": "^16.4.2",
+    "fast-glob": "^3.3.2",
+    "mongodb": "^5.9.2",
+    "path-scurry": "^1.10.1",
+    "wholeseller": "file:auth-service",
+    "wholeseller-authentication-service": "file:auth-service",
+    "wholeseller-models": "file:models"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^20.11.8",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "eslint": "^8.56.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-config-standard-with-typescript": "^43.0.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "typescript": "^5.3.3"
+    "concurrently": "^8.2.2",
+    "glob": "^10.3.10",
+    "nodemon": "^3.0.3",
+    "path": "^0.12.7",
+    "ts-node": "^10.9.2",
+    "typescript-json-schema": "^0.62.0"
   }
 }
